ConsultingHub/force-app/main/default/objects/ia_Phase__c/ia_Phase__c.object-meta.xml
<CustomObject>
    <description>The Phases of IA engagement</description>
    <label>Phase</label>
    <nameField>
        <label>Phase Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Phases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>