ConsultingHub/force-app/main/default/objects/ia_Phase__c/fields/Implementation_Type__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Type__c</fullName>
    <label>Implementation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ia_Implementation_Type</valueSetName>
    </valueSet>
</CustomField>