ConsultingHub/force-app/main/default/objects/ia_Phase__c/fields/Project_Managed_By__c.field-meta.xml
<CustomField>
    <fullName>Project_Managed_By__c</fullName>
    <label>Project Managed By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ia_Project_Management</valueSetName>
    </valueSet>
</CustomField>