ConsultingHub/force-app/main/default/objects/ia_Phase__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre- Discovery</fullName>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Create Plan</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Measure</fullName>
            </value>
            <value>
                <fullName>Adapt</fullName>
            </value>
            <value>
                <fullName>Internal Account Collaboration</fullName>
            </value>
            <value>
                <fullName>Create Roadmap</fullName>
            </value>
            <value>
                <fullName>Transition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>