ConsultingHub/force-app/main/default/objects/ia_Phase__c/recordTypes/IA_Method_2_0.recordType-meta.xml
<RecordType>
    <fullName>IA_Method_2_0</fullName>
    <active>true</active>
    <label>IA Method 2.0</label>
</RecordType>