ConsultingHub/force-app/main/default/objects/ia_Phase__c/recordTypes/Prior_Phases.recordType-meta.xml
<RecordType>
    <fullName>Prior_Phases</fullName>
    <active>true</active>
    <label>Prior Phases</label>
</RecordType>