ConsultingHub/force-app/main/default/objects/ia_Phase__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Engagement_Type__c</columns>
    <columns>Type__c</columns>
    <columns>Sub_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>