ConsultingHub/force-app/main/default/objects/ia_Phase__c/listViews/IA_Method_2_0.listView-meta.xml
<ListView>
    <fullName>IA_Method_2_0</fullName>
    <columns>NAME</columns>
    <columns>Engagement_Type__c</columns>
    <columns>Type__c</columns>
    <columns>Sub_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ia_Phase__c.IA_Method_2_0</value>
    </filters>
    <label>IA Method 2.0</label>
</ListView>