ConsultingHub/force-app/main/default/objects/ia_Phase__c/listViews/Prior_Phases.listView-meta.xml
<ListView>
    <fullName>Prior_Phases</fullName>
    <columns>NAME</columns>
    <columns>Engagement_Type__c</columns>
    <columns>Type__c</columns>
    <columns>Sub_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ia_Phase__c.Prior_Phases</value>
    </filters>
    <label>Prior Phases</label>
</ListView>